--- a/index.html
+++ b/index.html
@@ -18,30 +18,36 @@
         </nav>
     </header>
     <main>
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
-        <div>
-            <img src="icons/microphone.svg" alt="">
-            <input type="text" name="" id="">
+        <div class="search-icon"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt=""></div>
+        <div class="center">
+            <div class="search-bar">
+                <img class="search-icon" src="icons/microphone.svg" alt="">
+                <input class = "bar" type="text" name="" id="">
+            </div>
         </div>
-        <div>
-            <button>Buscar con Google</button>
-            <button>Me siento con suerte</button>
-            <p>Ofrecido por Google en: <a href="">Español(Latinoamérica)</a> </p>
+        <div class="search-info">
+            <button class = "btn">Buscar con Google</button>
+            <button class = "btn">Me siento con suerte</button>
         </div>
+        <p class = "text-info">Ofrecido por Google en: <a href="">Español(Latinoamérica)</a> </p>
     </main>
     <footer>
-        <p>Colombia</p>
-        <div>
-            <a href="">Sobre Google</a>
-            <a href="">Publicidad</a>
-            <a href="">Negocios</a>
-            <a href="">Cómo funciona la Búsqueda</a>
-        </div>
-        <div>
-            <a href="">Privacidad</a>
-            <a href="">Condiciones</a>
-            <a href="">Preferencias</a>
-        </div>
+        <div class="content-footer">
+            <div class="fcountry">
+                <p class="txt">Colombia</p>
+            </div class = "container">
+                <div class="content-left">
+                    <a class="txt" href="">Sobre Google</a>
+                    <a class="txt" href="">Publicidad</a>
+                    <a class="txt" href="">Negocios</a>
+                    <a class="txt" href="">Cómo funciona la Búsqueda</a>
+                </div>
+                <div class="content-right">
+                    <a class="txt" href="">Privacidad</a>
+                    <a class="txt" href="">Condiciones</a>
+                    <a class="txt" href="">Preferencias</a>
+                </div>
+            </div>
     </footer>
 </body>
 </html>
