primera version final

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Julian Ardila Argüello">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="http://assets.stickpng.com/images/5a951939c4ffc33e8c148af2.png">
     <title>GoogleClone</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
             <a class="nav-link nav-element" href="">Gmail</a>
             <a class="nav-link nav-element" href="">Imágenes</a>
             <div class="shadow-img nav-elemen"><a class="nav-img" href=""><img src="icons/apps.svg" alt="Aplicaciones"></a></div>
-            <div class="shadow-img"><a class="nav-img" href=""><img src="icons/person.svg" alt="Perfil"></a></div>
+            <div class="shadow-img"><a class="nav-img" href="https://github.com/julianNot"><img src="icons/person.svg" alt="Perfil"></a></div>
         </nav>
     </header>
     <main>
@@ -35,19 +36,21 @@
         <div class="content-footer">
             <div class="fcountry">
                 <p class="txt">Colombia</p>
-            </div class = "container">
+            </div>
+            <div class="content-info">
                 <div class="content-left">
-                    <a class="txt" href="">Sobre Google</a>
-                    <a class="txt" href="">Publicidad</a>
-                    <a class="txt" href="">Negocios</a>
-                    <a class="txt" href="">Cómo funciona la Búsqueda</a>
+                    <a class="link" href="">Sobre Google</a>
+                    <a class="link" href="">Publicidad</a>
+                    <a class="link" href="">Negocios</a>
+                    <a class="link" href="">Cómo funciona la Búsqueda</a>
                 </div>
                 <div class="content-right">
-                    <a class="txt" href="">Privacidad</a>
-                    <a class="txt" href="">Condiciones</a>
-                    <a class="txt" href="">Preferencias</a>
+                    <a class="link" href="">Privacidad</a>
+                    <a class="link" href="">Condiciones</a>
+                    <a class="link" href="">Preferencias</a>
                 </div>
             </div>
+        </div>
     </footer>
 </body>
 </html>
